# smart-grid-energy-trader

./: .gitignore  Dockerfile  README.md  app.py  conftest.py  dataset_utils.py  env.py  environment.py  inference.py  inference_results.json  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
dataset/: dataset_card.json  episodes.csv  llm_prompts.jsonl  price_patterns.csv  states.csv
server/: app.py
smartgrid_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: index.html
static/dataset/: README.md  episodes.csv  generate_dataset.py  price_patterns.csv  states.csv
tests/: test_dataset_utils.py  test_environment.py  test_tasks.py
