[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-grid"
version = "1.0.0"
description = "Smart Grid Energy Trader OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "numpy",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"