[build-system]
requires      = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

# ──────────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────────
[project]
name            = "smartgrid-openenv"
version         = "1.0.0"
description     = "Smart Grid Energy Trader — OpenEnv environment for renewable energy microgrid management"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"

keywords = [
    "reinforcement-learning",
    "openenv",
    "energy",
    "smart-grid",
    "ai-agent",
    "hackathon",
]

dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "openai>=1.0.0,<2.0.0",
    "aiofiles>=23.0.0",
]

# ──────────────────────────────────────────────────────────────────
# Optional dependency groups
# ──────────────────────────────────────────────────────────────────
[project.optional-dependencies]

# pip install -e ".[dev]"
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# pip install -e ".[dataset]"
dataset = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

# pip install -e ".[all]"
all = [
    "smartgrid-openenv[dev]",
    "smartgrid-openenv[dataset]",
]

# ──────────────────────────────────────────────────────────────────
# Setuptools — tell it where to find our modules
# ──────────────────────────────────────────────────────────────────
[tool.setuptools]
py-modules = [
    "app",
    "environment",
    "tasks",
    "inference",
    "dataset_utils",
    "generate_dataset",
]

[tool.setuptools.package-data]
"*" = [
    "dataset/*.csv",
    "dataset/*.jsonl",
    "dataset/*.json",
    "dataset/README.md",
    "static/*.html",
    "openenv.yaml",
    "README.md",
]

# ──────────────────────────────────────────────────────────────────
# Black — code formatter
# ──────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 88
target-version = ["py310", "py311", "py312"]

# ──────────────────────────────────────────────────────────────────
# Ruff — linter
# ──────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "UP007"]

[tool.ruff.lint.per-file-ignores]
"inference.py" = ["E402"]
"app.py"       = ["B006"]

# ──────────────────────────────────────────────────────────────────
# Mypy — type checker
# ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────────
# Pytest — test runner
# ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths     = ["tests"]
asyncio_mode  = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
log_cli       = true
log_cli_level = "INFO"
